// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank-line-between-htmls.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<!--lint disable no-html-->
<p align="center"><img src="logo/vertical.png" alt="labelify" height="150px"></p>
<!--lint enable no-html-->

=====================================output=====================================
<!--lint disable no-html-->
<p align="center"><img src="logo/vertical.png" alt="labelify" height="150px"></p>
<!--lint enable no-html-->

================================================================================
`;

exports[`multiline.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
1.  Some test text, the goal is to have the html table below nested within this number. When formating on save Prettier will continue to add an indent each time pushing the table further and further out of sync. 

    <table class="table table-striped">
    <tr>
    <th>Test</th>
    <th>Table</th>
    </tr>
    <tbody>
        <tr>
        <td>will</td>
        <td>be</td>
        </tr>
        <tr>
        <td>pushed</td>
        <td>When</td>
        </tr>
        <tr>
        <td>Format on</td>
        <td>Save</td>
        </tr>
    </tbody>
    </table>

=====================================output=====================================
1.  Some test text, the goal is to have the html table below nested within this
    number. When formating on save Prettier will continue to add an indent each
    time pushing the table further and further out of sync.

    <table class="table table-striped">
    <tr>
    <th>Test</th>
    <th>Table</th>
    </tr>
    <tbody>
        <tr>
        <td>will</td>
        <td>be</td>
        </tr>
        <tr>
        <td>pushed</td>
        <td>When</td>
        </tr>
        <tr>
        <td>Format on</td>
        <td>Save</td>
        </tr>
    </tbody>
    </table>

================================================================================
`;

exports[`multiline-with-trailing-space.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
1.  Some test text, the goal is to have the html table below nested within this number. When formating on save Prettier will continue to add an indent each time pushing the table further and further out of sync. 

    <table class="table table-striped">
    <tr>
    <th>Test</th>
    <th>Table</th>
    </tr>
    <tbody>
        <tr>
        <td>will</td>  
        <td>be</td>
        </tr>
        <tr>  
        <td>pushed</td>  
        <td>When</td>
        </tr>  
        <tr>  
        <td>Format on</td>  
        <td>Save</td>  
        </tr>
    </tbody>
    </table>

=====================================output=====================================
1.  Some test text, the goal is to have the html table below nested within this
    number. When formating on save Prettier will continue to add an indent each
    time pushing the table further and further out of sync.

    <table class="table table-striped">
    <tr>
    <th>Test</th>
    <th>Table</th>
    </tr>
    <tbody>
        <tr>
        <td>will</td>  
        <td>be</td>
        </tr>
        <tr>  
        <td>pushed</td>  
        <td>When</td>
        </tr>  
        <tr>  
        <td>Format on</td>  
        <td>Save</td>  
        </tr>
    </tbody>
    </table>

================================================================================
`;

exports[`simple.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
<!-- hello world -->

=====================================output=====================================
<!-- hello world -->

================================================================================
`;
